--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -724,7 +724,6 @@ h3{
 .login-wrapper{
     display: flex;
     justify-content: space-around;
-    padding: 40px;
     gap: 60px;
     position: relative;
     align-items: stretch;
@@ -733,6 +732,7 @@ h3{
 
 .login-left, .login-right{
     width: 25%;
+    padding: 40px;
 }
 
 .login-left form{
@@ -810,7 +810,7 @@ h3{
     width: 1px;
     background-color: var(--dividergrey);
     height: auto;
-    top:-10px;
+    top:0;
 }
 
 /** login-right **/
@@ -1068,6 +1068,34 @@ h3{
     list-style: none;
 }
 
+.resetpw-content{
+    width: 20%;
+}
+
 .resetpw-content h2{
     margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+.login-resetpw{
+    width: 100%;
+    padding: 20px;
+    border: none;
+    border-bottom: 1px solid #000;
+    font-size: 10px;
+    outline: none;
+    position: relative;
+    background: transparent;
+}
+
+.btn-reset-password{
+    border: 1px solid black;
+    background-color: white;
+    padding: 12px 24px;
+    margin: 20px 0;
+    font-weight: bold;
+    cursor: pointer;
+    width: 100%;
+    transform: background-color 0.3s ease;
+    font-size: 12px;
 }
