--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1099,3 +1099,108 @@ h3{
     transform: background-color 0.3s ease;
     font-size: 12px;
 }
+
+/* ================== SHOP ================== */
+/* Shop-Container */
+
+.shop-container{
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.router-shop{
+    width: 90%;
+    border-bottom: 1px solid var(--graynhe);
+}
+
+.list-router-shop{
+    display: flex;
+    list-style: none;
+    justify-content: left;
+    width: 100%;
+    padding: 20px 0;
+    gap: 15px;
+}
+
+.list-router-shop > li > a{
+    color: var(--black);
+    font-size: 14px;
+    text-decoration: none;
+}
+
+.shop-main-content{
+    width:90%;
+    display:flex;
+
+}
+
+.filter-products-shop{
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    border-right: 1px solid var(--graynhe);
+}
+
+.filter-group{
+    
+}
+
+.filter-group-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    border-bottom: 1px solid var(--graynhe);
+}
+
+.btn-more-filter{
+    background-color: transparent;
+    border: none;
+    color: var(--black);
+    cursor: pointer;
+    font-size: 30px;
+    padding-right: 30px;
+}
+
+
+/* products */
+.products-list{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 20px;
+    width: 100%;
+    padding: 50px;
+}
+
+.product-title{
+    font-size: 15px;
+    height: 50px;
+}
+
+.product-quantity{
+    margin-top: 20px;
+    border-top: 1px solid var(--graynhe);
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+
+.product-targets{
+    height: 30px;
+}
+
+.btn-add-to-cart{
+    width: 100%;
+    height: 35px;
+    margin-top: 20px;
+    background-color: white;
+    border: 1px solid var(--black);
+    color: var(--black);
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+}
