--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,6 +21,71 @@ html{
 }
 
 
+.Search-Container{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top:0;
+    left: 0;
+    background-color: #00000029;
+    z-index: 1000;
+    display: none;
+}
+
+.site-search{
+    position: fixed;
+    width: 577px;
+    height: 100%;
+    z-index: 1001;
+    top: 0px;
+    right: 0;
+    background-color: white;
+    padding: 20px;
+    display: none;
+}
+
+.search-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.close-search{
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    color: black;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.form-search{
+    width: 100%;
+    display: flex;
+    border-bottom: 1px solid var(--black-light);
+}
+
+.form-search input{
+    width: 90%;
+    height: 50px;
+    padding: 10px 0;
+    border: none;
+    font-size: 16px;
+    color: var(--black-light);
+    outline: none;
+}
+
+.search-button{
+    flex:1;
+    height: 50px;
+    font-size: 16px;
+    background-color: transparent;
+    border: none;
+
+}
+
+
 /******************** Header **********************/
 
 
