--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,6 +21,11 @@ html{
 }
 
 
+/*================= SEARCH =================*/
+/*================= SEARCH =================*/
+/*================= SEARCH =================*/
+
+
 .Search-Container{
     position: fixed;
     width: 100%;
@@ -82,7 +87,24 @@ html{
     font-size: 16px;
     background-color: transparent;
     border: none;
+    cursor: pointer;
 
+}
+
+
+/*================= CART =================*/
+/*================= CART =================*/
+/*================= CART =================*/
+
+.cart-Container{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top:0;
+    left: 0;
+    background-color: #00000029;
+    z-index: 1000;
+    display: none;
 }
 
 
@@ -176,6 +198,7 @@ html{
     box-shadow: none;
     border: none;
     position: relative;
+    cursor: pointer;
 }
 
 .amount-cart{
@@ -1368,6 +1391,7 @@ h3{
 .products-list{
     display: grid;
     grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 20px;
     width: 100%;
     padding: 50px;
