--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1805,3 +1805,31 @@ h3{
 }
 
 
+/******************* Page User ****************************/
+.user-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.user-breadcrumb{
+    width: 90%;
+    margin: 30px 0;
+    border-bottom: 1px solid var(--graynhe);
+}
+
+.user-dashboard{
+    width: 100%;
+    height: auto;
+    margin: 20px;
+}
+
+.nav-user{
+    text-decoration: none;
+    list-style: none;
+}
+
+.user-active{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
