--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1838,7 +1838,7 @@ h3{
 
 .user-breadcrumb{
     width: 90%;
-    margin: 30px 0;
+    padding: 30px 0;
     border-bottom: 1px solid var(--graynhe);
 }
 
@@ -1848,9 +1848,12 @@ h3{
     margin: 20px;
 }
 
-.nav-user{
-    text-decoration: none;
+.nav-user li{
     list-style: none;
+}
+
+.nav-user li a{
+    text-decoration: none;
 }
 
 .user-active{
