--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1893,12 +1893,6 @@ h3{
     border-bottom: 1px solid var(--graynhe);
 }
 
-.user-dashboard{
-    width: 100%;
-    height: auto;
-    margin: 20px;
-}
-
 .nav-user li{
     list-style: none;
 }
@@ -1910,4 +1904,37 @@ h3{
 .user-active{
     text-decoration: underline;
     text-underline-offset: 5px;
+    margin-top: 20px;
+}
+
+.user-dashboard{
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    gap: 6rem;
+    margin-top: 60px;
+}
+
+.user-dashboard-menu{
+    width: 15%;
+}
+
+.user-menu li{
+    margin: 20px 0;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+.user-dashboard-profile{
+    width: 85%;
+}
+
+.user-dashboard-profile h1{
+    font-weight: 1000;
+    margin: 20px 0;
+}
+
+.profile-section{
+    display: flex;
+    flex-direction: row;
+    gap: 4rem;
 }
