--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -41,7 +41,7 @@ a{
 
 
 .Search-Container{
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100vh;
     top:0;
@@ -52,7 +52,7 @@ a{
 }
 
 .site-search{
-    position: fixed;
+    position: absolute;
     width: 577px;
     height: 100%;
     z-index: 1001;
@@ -112,7 +112,7 @@ a{
 /*================= CART =================*/
 
 .cart-Container{
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100vh;
     top:0;
@@ -125,9 +125,9 @@ a{
 
 
 .site-cart{
-    position: fixed;
+    position: absolute;
     width: 500px;
-    height: 100%;
+    height: 100vh;
     z-index: 1001;
     top: 0px;
     right: 0;
@@ -135,6 +135,8 @@ a{
     padding: 20px;
     display: none;
     animation: slideInRight 0.3s ease;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 
 .cart-header{
@@ -152,6 +154,109 @@ a{
     font-size: 20px;
     cursor: pointer;
 }
+
+.list-cart-products{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 100px;
+}
+
+.cart-product-item{
+    display: flex;
+    height: 150px;
+    border-top: 1px solid var(--graynhe);
+    padding: 20px 0;
+}
+
+.cart-product-image{
+    width: 50px;
+    height: 50px;
+}
+
+.cart-product-image > img{
+    width: 100%;
+}
+
+.cart-product-info{
+    flex:1;
+    position: relative;
+}
+
+.cart-product-name{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.cart-product-name > h2{
+    font-size: 20px;
+}
+
+.cart-product-price{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-weight: bold;
+}
+
+.cart-product-size{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.cart-product-quantity{
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 1px solid var(--black);
+    width: 80px;
+    align-items: center;
+}
+
+.btn-cart-quantity{
+    width: 100%;
+    padding: 10px 0;
+    border: none;
+    background-color: transparent;
+    font-weight: bold;
+}
+
+.cart-quantity-input{
+    width: 100%;
+    padding: 10px 0;
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    font-weight: bold;
+}
+
+.cart-checkout-container{
+    position:fixed;
+    width: 460px;
+    height: 100px;
+    bottom: 0;
+    border-top: 1px solid var(--graynhe);
+    display: flex;
+    flex-direction: column;
+    padding: 5px 0;
+    background-color: var(--white);
+}
+
+.cart-checkout-heading{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 5px 0;
+}
+
+.cart-checkout-btn{
+    background-color: var(--black);
+    padding: 10px 0;
+    color: var(--white);
+}
+
 
 
 /******************** Header **********************/
@@ -461,14 +566,6 @@ h3{
     font-size: 13px;
     color: grey;
 }
-
-
-
-
-
-
-
-
 
 
 /********************* Home ***********************/
