add to cart Handle

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -112,7 +112,7 @@ a{
 /*================= CART =================*/
 
 .cart-Container{
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     top:0;
@@ -125,7 +125,7 @@ a{
 
 
 .site-cart{
-    position: absolute;
+    position: fixed;
     width: 500px;
     height: 100vh;
     z-index: 1001;
