--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -257,6 +257,7 @@ a{
     background-color: var(--black);
     padding: 10px 0;
     color: var(--white);
+    text-align: center;
 }
 
 
@@ -276,13 +277,25 @@ a{
 
 .process-free-ship{
     width: 100%;
-    height: 30px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--graynhe);
     position: relative;
     margin-bottom: 5px;
+}
+
+.process-free-ship > p{
+    position: absolute;
+    color: var(--white);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 99;
+    width: 100%;
+    text-align: center;
+
 }
 .process-free-ship-bar{
     width: 100%;
@@ -299,7 +312,115 @@ a{
     padding-left: 5px;
     color:var(--white);
     font-weight: bold;
+    font-size: 10px;
     opacity: 80%;
+}
+
+
+
+/*================= CART MAIN ================*/
+
+.cart-wrapper{
+    display: flex;
+
+}
+
+.cart-content{
+    width: 60%;
+    padding-right: 50px;
+    padding-left: 160px;
+    padding-top: 100px;
+}
+
+.order-summary{
+    width: 40%;
+    background-color: var(--dividergrey);
+    padding-left: 50px;
+    padding-right: 140px;
+    padding-top: 100px;
+    position: sticky;
+    height: 85vh;
+    right: 0;
+    top: 125px;
+
+}
+
+.order-summary-header > h1{
+    font-weight: bold;
+}
+
+.order-summary-content{
+    padding-top: 30px;
+    border-top: 1px solid var(--graynhe);
+}
+
+.order-summary-item{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.total-amount{
+    font-weight: bold;
+}
+
+.voucher{
+    width: 100%;
+    display: flex;
+    gap: 5px;
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: 1px solid var(--graynhe);
+}
+
+.voucher > input{
+    width: 70%;
+    padding: 10px 0;
+    border: none;
+    font-size: 16px;
+    color: var(--black-light);
+    outline: none;
+    background-color: transparent;
+    border-bottom: 1px solid var(--graynhe);
+}
+
+.voucher > button{
+    width: 30%;
+    height: 50px;
+    font-size: 16px;
+    background-color: var(--black);
+    border: none;
+    cursor: pointer;
+    color:var(--white)
+}
+
+
+
+.checkout-btn{
+    background-color: var(--black);
+    padding: 15px 0;
+    color: var(--white);
+    font-weight: bold;
+    font-size: 10px;
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+    display: block;
+    margin-top: 30px;
+}
+
+.continue-shopping-btn{
+    background-color: var(--white);
+    border: 1px solid var(--black);
+    padding: 15px 0;
+    color: var(--black);
+    font-weight: bold;
+    font-size: 10px;
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+    display: block;
+    margin-top: 15px;
 }
 
 
