add username header

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -516,6 +516,9 @@ a{
     border: none;
     position: relative;
     cursor: pointer;
+    display: flex;
+    gap: 5px;
+    align-items: center;
 }
 
 .amount-cart{
