--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -491,10 +491,32 @@ a{
 }
 
 .header-promo-slider{
-    display: inline-block;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
     width: 360px;
+    height: 24px;
     padding: 0;
+    overflow-y: hidden;
+    position: relative;
+    
+}
+
+.slides{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-size: 13px;
+    position: absolute;
+    top: 0;
+}
+
+.slide{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.5s linear;
+    
 }
 
 .icon-header{
