fixed error order view

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2268,7 +2268,7 @@ h3{
     flex: 1;
 }
 
-.profile-password-innput{
+.profile-password-input{
     border: none;
     background: transparent;
     font-size: 28px;
