--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2432,3 +2432,162 @@ h3{
     font-weight: 800;
     margin-bottom: 20px;
 }
+
+
+/********************** Page ORDER ******************************/
+.page-order-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: auto;
+}
+
+/* Part of CHECKOUT */
+/* SHIPPING */
+
+.page-order-checkout-container{
+    background-color: white;
+    width: 50%;
+    padding: 20px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+.page-order-checkout{
+    max-width: 500px;
+    gap: 20px;
+    padding: 20px;
+}
+
+.order-checkout{
+    height: 60vh;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+}
+
+.page-order-checkout h3{
+    font-size: 1.3rem;
+    font-weight:900;
+    margin-bottom: 20px;
+}
+
+.order-checkout h4{
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.order-checkout a{
+    margin-left: 10px;
+}
+
+.order-checkout p{
+    font-weight: 500;
+    margin: 20px auto;
+}
+
+.order-checkout-price{
+    font-weight: bold;
+    margin-top: 5px;
+}
+
+.order-checkout-shipping-label{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 0;
+    font-weight: 600;
+}
+
+.order-checkout-shipping-label span{
+    margin-left: 60px;
+}
+
+.order-checkout-shipping{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.order-checkout-shipping h5{
+    font-weight: 700;
+    font-size: 1.1rem;
+    margin-top: 40px;
+}
+
+.order-checkout-shipping-form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.order-checkout-shipping-form input{
+    border: none;
+    border-bottom: 0.5px solid var(--graynhe);
+    background: transparent;
+    font-size: 1rem;
+}
+
+.btn-order-checkout-shipping{
+    font-size: 1rem;
+    background-color: var(--black);
+    color: white;
+    padding: 12px 16px;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.btn-order-checkout-shipping:hover {
+    background-color: #333;
+    transform: translateY(-2px);
+}
+
+.order-checkout-payment{
+    height: 60vh;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+}
+
+.order-checkout-payment h4{
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.order-checkout-payment h5{
+    font-weight: 700;
+    font-size: 1.1rem;
+    margin-top: 40px;
+}
+
+
+
+@media (max-width: 768px) {
+    .page-order-checkout-container {
+        flex-direction: column;
+    }
+}
+
+
+
+
+/* Part of SUMMARY */
+
+.page-order-summary-container{
+    background-color: var(--greylightnhe);
+    width: 50%;
+    padding: 20px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.page-order-summary{
+    max-width: 500px;
+    padding: 20px;
+    gap: 20px;
+}
