--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2461,7 +2461,7 @@ h3{
 }
 
 .order-checkout{
-    height: 85vh;
+    height: auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-bottom: 30px;
@@ -2565,14 +2565,7 @@ h3{
     font-size: 1.1rem;
 }
 
-
-
-@media (max-width: 768px) {
-    .page-order-checkout-container {
-        flex-direction: column;
-    }
-}
-
+/* Payment methods */
 .order-checkout-payment{
     height: auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -2580,7 +2573,7 @@ h3{
 }
 
 .order-checkout-payment-methods{
-    margin-top: 20px;
+    margin: 20px auto;
     border: 1px solid var(--graynhe);
     border-radius: 20px;
     padding: 20px;
@@ -2694,77 +2687,38 @@ h3{
     margin-bottom: 20px;
 }
 
-.order-checkout-review h5{
-    font-weight: 700;
-    font-size: 1.1rem;
+.order-checkmark{
+    margin-left: 20px;
+    font-weight: 600;
 }
 
-.order-checkout-review-section {
-    border-bottom: 1px solid #e0e0e0;
-    padding-bottom: 1rem;
-    margin-bottom: 1rem;
+.order-checkout-review p{
+    font-weight: 600;
+    margin: 20px auto;
 }
 
-.review-product {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 1rem;
-}
-
-.review-product .product-thumbnail {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-}
-
-.product-details {
-    flex: 1;
-    margin-left: 1rem;
-}
-
-.product-price {
-    min-width: 80px;
-    text-align: right;
-}
-
-.order-checkout-review-totals {
-    border-top: 1px solid #000;
-    padding-top: 1rem;
-}
-
-.totals-row {
-    display: flex;
-    justify-content: space-between;
-    margin: 0.5rem 0;
-}
-
-.totals-row.total {
-    font-size: 1.1rem;
-}
-
-.btn-order-place {
+.btn-order-checkout-button{
+    margin-top: 30px;
     background: black;
     color: white;
-    padding: 1rem;
+    padding: 14px;
     width: 100%;
-    text-transform: uppercase;
     border: none;
-    margin-top: 1.5rem;
     font-weight: bold;
     cursor: pointer;
 }
 
-
-
-
+.btn-order-checkout-button:hover {
+    background-color: #333;
+    transform: translateY(-2px);
+}
 
 /* Part of SUMMARY */
 
 .page-order-summary-container{
     background-color: var(--greylightnhe);
     width: 50%;
-    padding: 20px;
+    padding: 20px 40px;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -2774,4 +2728,106 @@ h3{
     max-width: 500px;
     padding: 20px;
     gap: 20px;
+}
+
+.page-order-summary h4{
+    font-size: 1.8rem;
+    letter-spacing: 1.5px;
+    font-weight:800;
+    margin-bottom: 20px;
+}
+
+.order-summary-items-row{
+    margin-top: 50px;
+}
+
+.order-summary-row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2rem;
+    margin: 15px 0;
+}
+
+.order-summary-row-total{
+    font-size: 1.2rem;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btn-order-summary{
+    margin: 30px 0;
+    background: black;
+    color: white;
+    padding: 14px;
+    width: 100%;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.btn-order-summary:hover {
+    background-color: #333;
+    transform: translateY(-2px);
+}
+
+.order-items-section{
+    margin-top: 30px;
+}
+
+.order-item{
+    display: flex;
+    align-items: flex-start;
+    margin-top: 15px;
+}
+
+.order-product-img{
+    width: 60px;
+    height: auto;
+    margin-right: 15px;
+}
+
+.order-item-details{
+    flex-grow: 1;
+    font-size: 14px;
+}
+
+.order-item-details p{
+    line-height:25px;
+}
+
+.order-item-details .order-brand{
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+
+.order-item-price{
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+.order-disclaimer{
+    font-size: 0.9rem;
+    font-weight: 600;
+    margin-top: 30px;
+    line-height: 1.5;
+    color: #333;
+}
+
+@media (max-width: 768px) {
+    .page-order-container {
+        flex-direction: column;
+    }
+
+    .page-order-summary-container,
+    .page-order-checkout-container {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .page-order-summary {
+        padding: 10px;
+    }
 }
