--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,29 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
+
+    
 }
+
+::-webkit-scrollbar {
+    width: 3px; /* Chiều rộng của thanh cuộn dọc */
+    height: 8px; /* Chiều cao của thanh cuộn ngang */
+    border-radius: none;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Màu nền track */
+    border-radius: none;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: var(--black); /* Màu nút kéo */
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Hover */
+  }
 
 html{
     font-size: 85%;
@@ -761,13 +783,19 @@ h3{
 
 /********************* Home ***********************/
 .poster{
-    height: 80vh;
+    height: 600px;
     width: 100%;
     position: relative;
+    overflow: hidden;
 }
 .poster-image{
-    width: 100%;
-    height: 100%;
+    display: block;
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: auto;
+    object-fit: cover;
 }
 .title{
     position: absolute;
@@ -1960,8 +1988,19 @@ h3{
 .quantity-amount{
     display: flex;
     height: 100%;
+    width: 100%;
+    gap: 10px;
+}
+
+.quantity-amount-item:nth-child(1){
+    display: flex;
+    height: 100%;
     width: 30%;
     border: 1px solid var(--graynhe);
+}
+.quantity-amount-item:nth-child(2){
+    height: 100%;
+    width: 70%;
 }
 
 .btn-quantity{
@@ -1988,6 +2027,7 @@ h3{
 
 .submit-add-to-cart{
     flex: 1;
+    width: 100%;
     height: 50px;
     color: var(--black);
     background-color: transparent;
