--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2871,3 +2871,113 @@ h3{
         padding: 10px;
     }
 }
+
+/*================ ADMIN ==============*/
+
+.wrapper-admin{
+    
+}
+
+.header-admin{
+    width: 100%;
+}
+
+.navbar-admin{
+    width: 100%;
+    background-color: var(--black);
+    padding: 5px 0;
+}
+
+.navbar-admin-items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    font-size: 15px;
+}
+
+
+.navbar-admin-items > li >a{
+    color: var(--white);
+}
+
+.logo-brand-admin{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 30px;
+}
+
+.logo-brand-admin > img{
+    width: auto;
+    height: 50px;
+}
+
+.container-admin{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    margin-top: 30px;
+    border-top: 1px solid var(--black);
+}
+
+.sidebar-admin{
+    width: 20%;
+    height: 100%;
+    border-right: 1px solid var(--black);
+
+}
+
+.sidebar-admin-items{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    padding: 10px;
+    gap: 5px;
+
+}
+
+.sidebar-item{
+    display: flex;
+    padding: 20px;
+    border: 1px solid var(--black);
+    cursor: pointer;
+
+}
+
+.content-admin{
+    flex: 1;
+    padding: 10px;
+}
+
+.table-data-products{
+    height: 300px;
+    overflow-y: scroll;
+}
+
+.custom-table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .custom-table th  {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
+    font-size: 15px;
+  }
+  .custom-table td{
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
+    font-size: 10px;
+  }
+  
+  .custom-table th {
+    background-color: var(--black);
+    color: var(--white);
+  }
+  .custom-table tr:hover{
+    background-color: #8fa2cc28;
+    cursor: pointer;
+  }
