--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -595,6 +595,7 @@ a{
 }
 
 .brand-item > a{
+    gap: 10px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -602,7 +603,7 @@ a{
 }
 
 .brand-item:hover{
-    background-color: #f8f8f8;
+    background-color: var(--graynhe);
     cursor: pointer;
 }
 
@@ -1390,7 +1391,7 @@ h3{
 }
 
 
-/******************** Page New *********************/
+/******************** Page NEW *********************/
 /* Header New */
 .new-container{
     width: 100%;
@@ -1406,9 +1407,17 @@ h3{
     position: relative;
 }
 
+.new-poster-header{
+    width: 100%;
+    height: 600px;
+    position: relative;
+    overflow: hidden;
+}
+
 .new-poster-img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .nav-new{
@@ -1441,22 +1450,24 @@ h3{
 
 .new-header-title-h1{
     font-size: 2.5rem;
+    font-weight: 700;
     padding-bottom: 20px;
 }
 
 .new-header-title p{
+
     font-size: 1.2rem;
     color: black;
 }
 
 .btn-new-header-title{
     display: inline-block;
-    font-weight: 600px;
+    font-weight: bold;
     padding: 15px;
     border-radius: 30px;
     width: 150px;
     box-sizing: border-box;
-    background-color: white;
+    background-color: transparent;
     color: black;
     margin-top: 30px;
     text-decoration: none !important;
@@ -1476,15 +1487,12 @@ h3{
     height: auto;
 }
 
-.new-filter-sort-content{
-    padding: 70px 0;
-}
-
 .new-filter-sort{
     width: 50%;
     height: 40px;
     display: flex;
     gap: 20px;
+    margin: 20px 0;
 }
 
 .new-filter{
@@ -1494,21 +1502,87 @@ h3{
     background-color: var(--white);
     border: 1px solid var(--black);
     font-size: 14px;
+    font-weight: 600;
 }
 
 .new-category-container{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     min-height: 300px;
     gap: 20px;
 }
 
 
+.new-product-item{
+    width: 100%;
+
+}
+
+.new-product-item img{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.new-product-item > h5{
+    margin: 20px auto;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.new-product-item > p{
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.new-product-cheers{
+    grid-column-start: 3;
+    grid-column-end: 5;
+    border-left: 1px solid var(--graynhe);
+}
+
+.new-product-cheers img{
+    width: 100%;
+    height: auto;
+}
+
+.new-product-cheers-content{
+    width: 90%;
+    margin: 10px 0;
+    padding-left: 30px;
+}
+
+.new-product-cheers-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.btn-new-cheers{
+    margin-top: 10px;
+    margin-left: 30px;
+    font-weight: 600;
+    display: inline-block;
+    padding: 0 32px;
+    width: auto;
+    border-radius: 20px;
+    height: 42px;
+    border: .5px solid black;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    line-height: 42px;
+    text-decoration: none;
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
+    background-color: white;
+}
 
 
 
-/* Page Reset Password */
+
+/**************** Page RESET PASSWORD ******************/
 .reset-password-container{
     height: auto;
     width: 100%;
