--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -170,18 +170,22 @@ a{
 
   .info-detail{
     margin-top: 50px;
+    position: relative;
 
   }
 
   .info-detail-title{
     padding: 10px 0;
-    background-color: var(--graynhe);
+    border-bottom: 1px solid var(--graynhe);
+    border-top: 1px solid var(--graynhe);
     text-align: center;
+    font-size: 30px;
   }
 
   .form-product-detail{
+    width: 60%;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(2,1fr);
     gap: 10px;
     margin-top: 20px;
@@ -190,29 +194,43 @@ a{
 .form-group{
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 100%;
     
 }
 
 .form-group > input{
-    padding:5px;
+    padding:20px 10px;
     height: 30px;
     width: 100%;
 }
 
 .form-group > select{
-    padding: 5px;
+    padding: 5px 10px;
     height: 30px;
     width: 100%;
 }
 
+.Album{
+    position: absolute;
+    right: 0px;
+    width: 400px;
+}
+
+.list-img{
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    height: 400px;
+   
+}
+
 .list-img-item{
-    width: 60px;
-    height: 60px;
+    width: 100%;
+    background-color: var(--greylightnhe);
 }
 
 .btn-group{
-    width: 300px;
+    width: 100%;
     height: 50px;
     display: flex;
     gap: 5px;
@@ -222,16 +240,52 @@ a{
 .btn-group > button{
     width: 100%;
     background-color: transparent;
-    border: 1px solid var(--black);
+    border: 0.5px solid var(--black);
     padding: 10px;
+    box-shadow: none;
 }
 
 .create-product{
     margin-top: 50px;
+    position: relative;
 }
 
 .create-product-title{
     padding: 10px 0;
-    background-color: var(--graynhe);
+    border-bottom: 1px solid var(--graynhe);
+    border-top: 1px solid var(--graynhe);
     text-align: center;
+    font-size: 30px;
   }
+
+.form-create-product{
+    width: 60%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    gap: 10px;
+    margin-top: 20px;
+    
+}
+
+.dropzone {
+      width: 100%;
+      padding: 30px;
+      border: 2px dashed #999;
+      text-align: center;
+      cursor: pointer;
+      margin-bottom: 20px;
+    }
+    .dropzone.dragover {
+      background: #eef;
+    }
+    .preview{
+        height: 400px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+    .preview img {
+      width: 100%;
+      margin: 5px;
+      object-fit: cover;
+    }
