--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -447,7 +447,7 @@ a{
 
 
 
-/******************** Header **********************/
+/******************** Page HEADER **********************/
 
 
 .main-nav{
