--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -659,6 +659,15 @@ a{
     color: var(--black);
 }
 
+@media (max-width: 768px) {
+    .header-top{
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
+        text-align: center;
+    }
+}
+
 
 
 
