--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -57,6 +57,8 @@ a{
     color: var(--black);
 }
 
+
+
 /*================ ADMIN ==============*/
 
 .wrapper-admin{
@@ -144,6 +146,34 @@ a{
     font-size: 30px;
 }
 
+.feature-product-table{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.form-search{
+    display: flex;
+    gap: 5px;
+}
+
+.search{
+    border: 1px solid var(--black);
+    padding: 10px;
+}
+
+.search > input{
+    border: none;
+    outline-style: none;
+}
+
+.btn-search{
+    padding: 10px;
+    background-color: var(--black);
+    border: none;
+    box-shadow: none;
+    color: var(--white);
+}
+
 .table-data-products, .table-data-store{
     height: 300px;
     overflow-y: scroll;
@@ -165,14 +195,19 @@ a{
     padding: 10px;
     text-align: left;
     font-size: 10px;
+    
   }
   
   .custom-table th {
     background-color: var(--black);
     color: var(--white);
   }
+
+  .custom-table tr{
+    background-color: var(--greylightnhe);
+  }
   .custom-table tr:hover{
-    background-color: #8fa2cc28;
+    background-color: var(--graynhe);
     cursor: pointer;
   }
 
@@ -196,6 +231,8 @@ a{
     grid-template-columns: repeat(2,1fr);
     gap: 10px;
     margin-top: 20px;
+    border-right: 1px solid var(--graynhe);
+    padding-right: 60px;
   }
 
 .form-group{
@@ -203,6 +240,9 @@ a{
     flex-direction: column;
     width: 100%;
     
+}
+.form-group > span{
+    font-weight: 600;
 }
 
 .form-group > input{
@@ -220,9 +260,36 @@ a{
 .Album{
     position: absolute;
     right: 0px;
-    top: 400px;
     width: 400px;
+    font-weight: 600;
 }
+
+.dropzone {
+    width: 100%;
+    height: 200px;
+    padding: 30px;
+    border: 2px dashed var(--graynhe);
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .dropzone.dragover {
+    background: #eef;
+  }
+  .preview{
+      height: 400px;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      margin-top: 10px;
+  }
+  .preview img {
+    width: 100%;
+    margin: 5px;
+    object-fit: cover;
+  }
 
 .list-img{
     display: flex;
@@ -242,15 +309,19 @@ a{
     height: 50px;
     display: flex;
     gap: 5px;
-    margin-top: 50px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    
 }
 
 .btn-group > button{
     width: 100%;
     background-color: transparent;
-    border: 0.5px solid var(--black);
+    background-color: var(--black);
     padding: 10px;
     box-shadow: none;
+    color: var(--white);
+    
 }
 
 .create-product{
@@ -270,30 +341,11 @@ a{
     width: 60%;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
+    border-right: 1px solid var(--graynhe);
+    padding-right: 60px;
     gap: 10px;
     margin-top: 20px;
     
 }
 
-.dropzone {
-      width: 100%;
-      padding: 30px;
-      border: 2px dashed #999;
-      text-align: center;
-      cursor: pointer;
-      margin-bottom: 20px;
-    }
-    .dropzone.dragover {
-      background: #eef;
-    }
-    .preview{
-        height: 400px;
-        overflow-y: scroll;
-        overflow-x: hidden;
-    }
-    .preview img {
-      width: 100%;
-      margin: 5px;
-      object-fit: cover;
-    }
+
