--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -141,19 +141,25 @@ a{
 .table-title{
     padding: 10px 0;
     border-bottom: 1px solid var(--graynhe);
-    border-top: 1px solid var(--graynhe);
-    text-align: center;
-    font-size: 30px;
+    text-align: left;
+    font-size: 15px;
 }
 
 .feature-product-table{
     margin-top: 20px;
     margin-bottom: 20px;
+    display: flex;
+    width: 100%;
+    gap: 5px;
 }
 
 .form-search{
     display: flex;
     gap: 5px;
+}
+
+.form-sort{
+
 }
 
 .search{
@@ -220,9 +226,8 @@ a{
   .info-detail-title{
     padding: 10px 0;
     border-bottom: 1px solid var(--graynhe);
-    border-top: 1px solid var(--graynhe);
-    text-align: center;
-    font-size: 30px;
+    text-align: left;
+    font-size: 15px;
   }
 
   .form-product-detail{
@@ -332,9 +337,8 @@ a{
 .create-product-title{
     padding: 10px 0;
     border-bottom: 1px solid var(--graynhe);
-    border-top: 1px solid var(--graynhe);
-    text-align: center;
-    font-size: 30px;
+    text-align: left;
+    font-size: 15px;
   }
 
 .form-create-product{
