update home responsive

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -836,7 +836,7 @@ h3{
 }
 
 
-/********************* Home ***********************/
+/********************* Page HOME ***********************/
 .poster{
     height: 600px;
     width: 100%;
@@ -864,13 +864,15 @@ h3{
 .h1-title{
     padding-bottom: 30px;
     font-size: 40px;
+    font-weight: 700;
 }
 
 .btn-title{
     display: inline-block;
-    font-weight: 600px;
+    font-size: 1.2rem;
+    font-weight: 600;
     padding: 20px;
-    border-radius: 30px;
+    border-radius: 50px;
     width: 200px;
     box-sizing: border-box;
     background-color: white;
@@ -878,12 +880,33 @@ h3{
     margin-top: 30px;
     text-decoration: none !important;
     text-align: center;
-    border: 1px solid (var(--grey));
+    border: 1px solid black;
     transition: 0.5s;
 }
 .btn-title:hover{
-    background-color: rgba(0, 0, 0, 0.33);
+    background-color: var(--black);
     color: white;
+}
+
+@media (max-width: 768px) {
+    .poster{
+        height: 600px;
+    }
+    .title{
+        position: absolute;
+        width: 200px;
+        top: 22%;
+        left: 0;
+    }
+    .h1-title{
+        font-size: 1.3rem;
+        font-weight: 700;
+    }
+    .btn-title{
+        padding: 10px;
+        font-size: 1rem;
+        width: 150px;
+    }
 }
 
 /* Bestseller-home */
